# taskmanager

./: .env.sample  .gitignore  README.md  docker-compose.yml  pyproject.toml
taskmanager/: settings.py  urls.py
tasks/: admin.py  models.py  urls.py
tasks/migrations/: 0001_initial.py  0002_task_owner_alter_task_creator.py  0003_auto_20251219_0719.py  0004_epic_task_epic_sprint.py
templates/: _footer.html  _header.html  base.html
templates/tasks/: _header.html  base.html  help.html  home.html
