[project]
name = "taskmanager"
version = "0.1.0"
description = "Django Task Manager Application"
authors = [
    {name = "usbpendrive",email = "ferry.fernando@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (==5.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)"
]
