[project]
name = "taskmanager"
version = "0.1.0"
description = "Task Manager Django Project"
authors = [
    {name = "usbpendrive",email = "ferry.fernando@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0,<7.0)",
    "psycopg (>=3.3.2,<4.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "django-bootstrap5 (>=25.3,<26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
